[gd_scene load_steps=15 format=3 uid="uid://d03kts5q3yw8l"]

[ext_resource type="Script" uid="uid://ckahvsm1sw37t" path="res://scripts/managers/difficulty_manager.gd" id="1_oinrr"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="2_we5c5"]
[ext_resource type="Texture2D" uid="uid://cw64dvnkk3oqm" path="res://arrow.png" id="3_hyg2l"]
[ext_resource type="Texture2D" uid="uid://b1a546gu0sy1e" path="res://arrow_green.png" id="4_3povj"]
[ext_resource type="Texture2D" uid="uid://c2isxy3781r0g" path="res://arrow_green2.png" id="5_100ey"]
[ext_resource type="Texture2D" uid="uid://bh3rusuqfqwpi" path="res://arrow2.png" id="5_hyg2l"]
[ext_resource type="Texture2D" uid="uid://l2atiswygex0" path="res://transitions/bg.jpg" id="6_h8aph"]
[ext_resource type="Texture2D" uid="uid://b8svlp3txe6yc" path="res://difficult_element.png" id="7_we5c5"]
[ext_resource type="Texture2D" uid="uid://cnq0bjwloxgb0" path="res://tick.png" id="9_3povj"]

[sub_resource type="Animation" id="Animation_vmxya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3povj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttonback:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_hyg2l")]
}

[sub_resource type="Animation" id="Animation_7r7o8"]
resource_name = "arrow_back"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_hyg2l"), ExtResource("5_hyg2l")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="Animation" id="Animation_li7wd"]
resource_name = "arrow_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_3povj"), ExtResource("5_100ey")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7r7o8"]
_data = {
&"RESET": SubResource("Animation_vmxya"),
&"arrow_back": SubResource("Animation_7r7o8"),
&"arrow_green": SubResource("Animation_li7wd")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xu2wo"]

[node name="Difficulty" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oinrr")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7r7o8")
}

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, 0)
texture = ExtResource("6_h8aph")

[node name="Bg2" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, -2156)
texture = ExtResource("6_h8aph")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="elements" type="CanvasGroup" parent="."]
position = Vector2(540, 514)

[node name="diff1" type="Sprite2D" parent="elements"]
texture_filter = 1
position = Vector2(0, -200)
texture = ExtResource("7_we5c5")

[node name="Label" type="Label" parent="elements/diff1"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.33369803
anchor_top = 0.22077923
anchor_right = 0.66630197
anchor_bottom = 0.77922076
offset_left = -457.0
offset_top = -77.0
offset_right = -457.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(105, 38)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_we5c5")
theme_override_font_sizes/font_size = 82
text = "NORMAL"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tick" type="Sprite2D" parent="elements/diff1"]
visible = false
position = Vector2(-327, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_3povj")

[node name="diff2" type="Sprite2D" parent="elements"]
self_modulate = Color(0.60784316, 1, 1, 1)
texture_filter = 1
texture = ExtResource("7_we5c5")

[node name="Label" type="Label" parent="elements/diff2"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.25218818
anchor_top = 0.22077923
anchor_right = 0.7478118
anchor_bottom = 0.77922076
offset_left = -335.5
offset_top = -77.0
offset_right = -578.5
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(105, 38)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_we5c5")
theme_override_font_sizes/font_size = 82
text = "LOOSE GRIP"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tick" type="Sprite2D" parent="elements/diff2"]
visible = false
position = Vector2(-327, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_3povj")

[node name="diff3" type="Sprite2D" parent="elements"]
self_modulate = Color(1, 0.3882353, 1, 1)
texture_filter = 1
position = Vector2(0, 200)
texture = ExtResource("7_we5c5")

[node name="Label" type="Label" parent="elements/diff3"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.16958424
anchor_top = 0.22077923
anchor_right = 0.8304157
anchor_bottom = 0.77922076
offset_left = -260.0
offset_top = -77.0
offset_right = -654.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(105, 38)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_we5c5")
theme_override_font_sizes/font_size = 82
text = "AMBIDEXTROUS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tick" type="Sprite2D" parent="elements/diff3"]
visible = false
position = Vector2(-327, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_3povj")

[node name="diff4" type="Sprite2D" parent="elements"]
self_modulate = Color(1, 0.2829346, 0.22129557, 1)
texture_filter = 1
position = Vector2(0, 400)
texture = ExtResource("7_we5c5")

[node name="Label" type="Label" parent="elements/diff4"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.29923412
anchor_top = 0.22077923
anchor_right = 0.70076585
anchor_bottom = 0.77922076
offset_left = -378.5
offset_top = -77.0
offset_right = -535.5
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(105, 38)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_we5c5")
theme_override_font_sizes/font_size = 82
text = "ONE HAND"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tick" type="Sprite2D" parent="elements/diff4"]
visible = false
position = Vector2(-327, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_3povj")

[node name="buttonback" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026851851
anchor_top = 0.024074074
anchor_right = 0.24153072
anchor_bottom = 0.13518518
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0000305
offset_bottom = 4.0
pivot_offset = Vector2(110, 50)
theme_override_fonts/font = ExtResource("2_we5c5")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_hyg2l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xu2wo")
icon = ExtResource("3_hyg2l")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="buttonback" to="." method="_on_buttonback_mouse_entered"]
[connection signal="mouse_exited" from="buttonback" to="." method="_on_buttonback_mouse_exited"]
[connection signal="pressed" from="buttonback" to="." method="_on_buttonback_pressed"]
